// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<div
  class="ControlledInputField"
  data-test-id="cf-ui-controlled-input-field"
>
  <div
    class="ControlledInputField__input Checkbox"
  >
    <input
      aria-label="label text"
      class="ControlledInput"
      data-test-id="cf-ui-controlled-input"
      id="checkbox"
      type="checkbox"
      value=""
    />
    <label
      class="Input__ghost Checkbox__ghost"
      for="checkbox"
    >
      <svg
        class="Icon Icon--medium Icon--white"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z"
        />
      </svg>
    </label>
  </div>
  <div
    class="Checkbox__label-wrapper"
  >
    <label
      class="FormLabel ControlledInputField__label"
      data-test-id="cf-ui-form-label"
      for="checkbox"
    >
      label text
    </label>
  </div>
</div>
`;

exports[`renders the component as checked 1`] = `
<div
  class="ControlledInputField my-extra-class"
  data-test-id="cf-ui-controlled-input-field"
>
  <div
    class="ControlledInputField__input Checkbox"
  >
    <input
      aria-label="Label Text"
      checked=""
      class="ControlledInput"
      data-test-id="cf-ui-controlled-input"
      id="checkbox"
      type="checkbox"
      value=""
    />
    <label
      class="Input__ghost Checkbox__ghost"
      for="checkbox"
    >
      <svg
        class="Icon Icon--medium Icon--white"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z"
        />
      </svg>
    </label>
  </div>
  <div
    class="Checkbox__label-wrapper"
  >
    <label
      class="FormLabel ControlledInputField__label"
      data-test-id="cf-ui-form-label"
      for="checkbox"
    >
      Label Text
    </label>
  </div>
</div>
`;

exports[`renders the component as required 1`] = `
<div
  class="ControlledInputField my-extra-class"
  data-test-id="cf-ui-controlled-input-field"
>
  <div
    class="ControlledInputField__input Checkbox"
  >
    <input
      aria-label="Label Text"
      class="ControlledInput"
      data-test-id="cf-ui-controlled-input"
      id="checkbox"
      required=""
      type="checkbox"
      value=""
    />
    <label
      class="Input__ghost Checkbox__ghost"
      for="checkbox"
    >
      <svg
        class="Icon Icon--medium Icon--white"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z"
        />
      </svg>
    </label>
  </div>
  <div
    class="Checkbox__label-wrapper"
  >
    <label
      class="FormLabel ControlledInputField__label"
      data-test-id="cf-ui-form-label"
      for="checkbox"
    >
      Label Text
      <span
        class="FormLabel__required-text"
      >
        (
        required
        )
      </span>
    </label>
  </div>
</div>
`;

exports[`renders the component in a disabled state 1`] = `
<div
  class="ControlledInputField my-extra-class ControlledInputField--disabled"
  data-test-id="cf-ui-controlled-input-field"
>
  <div
    class="ControlledInputField__input Checkbox"
  >
    <input
      aria-label="Label Text"
      class="ControlledInput ControlledInput--disabled"
      data-test-id="cf-ui-controlled-input"
      disabled=""
      id="checkbox"
      type="checkbox"
      value=""
    />
    <label
      class="Input__ghost Checkbox__ghost"
      for="checkbox"
    >
      <svg
        class="Icon Icon--medium Icon--secondary"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z"
        />
      </svg>
    </label>
  </div>
  <div
    class="Checkbox__label-wrapper"
  >
    <label
      class="FormLabel ControlledInputField__label"
      data-test-id="cf-ui-form-label"
      for="checkbox"
    >
      Label Text
    </label>
  </div>
</div>
`;

exports[`renders the component with a help text 1`] = `
<div
  class="ControlledInputField my-extra-class"
  data-test-id="cf-ui-controlled-input-field"
>
  <div
    class="ControlledInputField__input Checkbox"
  >
    <input
      aria-label="Label Text"
      class="ControlledInput"
      data-test-id="cf-ui-controlled-input"
      id="checkbox"
      type="checkbox"
      value=""
    />
    <label
      class="Input__ghost Checkbox__ghost"
      for="checkbox"
    >
      <svg
        class="Icon Icon--medium Icon--white"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z"
        />
      </svg>
    </label>
  </div>
  <div
    class="Checkbox__label-wrapper"
  >
    <label
      class="FormLabel ControlledInputField__label"
      data-test-id="cf-ui-form-label"
      for="checkbox"
    >
      Label Text
    </label>
    <p
      class="HelpText ControlledInputField__help-text"
      data-test-id="cf-ui-help-text"
    >
      Help Text
    </p>
  </div>
</div>
`;

exports[`renders the component with a light label variation 1`] = `
<div
  class="ControlledInputField my-extra-class"
  data-test-id="cf-ui-controlled-input-field"
>
  <div
    class="ControlledInputField__input Checkbox"
  >
    <input
      aria-label="Label Text"
      class="ControlledInput"
      data-test-id="cf-ui-controlled-input"
      id="checkbox"
      type="checkbox"
      value=""
    />
    <label
      class="Input__ghost Checkbox__ghost"
      for="checkbox"
    >
      <svg
        class="Icon Icon--medium Icon--white"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z"
        />
      </svg>
    </label>
  </div>
  <div
    class="Checkbox__label-wrapper"
  >
    <label
      class="FormLabel ControlledInputField__label ControlledInputField__label--light"
      data-test-id="cf-ui-form-label"
      for="checkbox"
    >
      Label Text
    </label>
    <div
      class="ValidationMessage ControlledInputField__validation-message"
      data-test-id="cf-ui-validation-message"
    >
      <svg
        class="Icon Icon--small Icon--negative ValidationMessage__icon"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <p
        class="ValidationMessage__text"
      >
        Not valid!
      </p>
    </div>
  </div>
</div>
`;

exports[`renders the component with a validation message 1`] = `
<div
  class="ControlledInputField my-extra-class"
  data-test-id="cf-ui-controlled-input-field"
>
  <div
    class="ControlledInputField__input Checkbox"
  >
    <input
      aria-label="Label Text"
      class="ControlledInput"
      data-test-id="cf-ui-controlled-input"
      id="checkbox"
      type="checkbox"
      value=""
    />
    <label
      class="Input__ghost Checkbox__ghost"
      for="checkbox"
    >
      <svg
        class="Icon Icon--medium Icon--white"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z"
        />
      </svg>
    </label>
  </div>
  <div
    class="Checkbox__label-wrapper"
  >
    <label
      class="FormLabel ControlledInputField__label"
      data-test-id="cf-ui-form-label"
      for="checkbox"
    >
      Label Text
    </label>
    <div
      class="ValidationMessage ControlledInputField__validation-message"
      data-test-id="cf-ui-validation-message"
    >
      <svg
        class="Icon Icon--small Icon--negative ValidationMessage__icon"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <p
        class="ValidationMessage__text"
      >
        Not valid!
      </p>
    </div>
  </div>
</div>
`;

exports[`renders the component with a value 1`] = `
<div
  class="ControlledInputField my-extra-class"
  data-test-id="cf-ui-controlled-input-field"
>
  <div
    class="ControlledInputField__input Checkbox"
  >
    <input
      aria-label="Label Text"
      class="ControlledInput"
      data-test-id="cf-ui-controlled-input"
      id="checkbox"
      type="checkbox"
      value="someValue"
    />
    <label
      class="Input__ghost Checkbox__ghost"
      for="checkbox"
    >
      <svg
        class="Icon Icon--medium Icon--white"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z"
        />
      </svg>
    </label>
  </div>
  <div
    class="Checkbox__label-wrapper"
  >
    <label
      class="FormLabel ControlledInputField__label"
      data-test-id="cf-ui-form-label"
      for="checkbox"
    >
      Label Text
    </label>
  </div>
</div>
`;

exports[`renders the component with an additional class name 1`] = `
<div
  class="ControlledInputField my-extra-class"
  data-test-id="cf-ui-controlled-input-field"
>
  <div
    class="ControlledInputField__input Checkbox"
  >
    <input
      aria-label="Label Text"
      class="ControlledInput"
      data-test-id="cf-ui-controlled-input"
      id="checkbox"
      type="checkbox"
      value=""
    />
    <label
      class="Input__ghost Checkbox__ghost"
      for="checkbox"
    >
      <svg
        class="Icon Icon--medium Icon--white"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z"
        />
      </svg>
    </label>
  </div>
  <div
    class="Checkbox__label-wrapper"
  >
    <label
      class="FormLabel ControlledInputField__label"
      data-test-id="cf-ui-form-label"
      for="checkbox"
    >
      Label Text
    </label>
  </div>
</div>
`;
